# code-numerically-robust-fixedpoint-smoother

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  reference.md
experiments/: calibrate_bvp_solver.py  estimate_parameters.py  fps_versus_kalman_filter.py  measure_memory.py  measure_robustness.py  measure_stability.py  measure_wall_time.py  new.py
experiments/old/: estimate_parameters_old.py  measure_stability_new.py  measure_wall_time_all.py
from_results_to_paper/: measure_memory.py  measure_robustness.py  measure_stability.py  measure_wall_time.py
results/: measure_wall_time.pkl
results/measure_memory/: results.pkl
results/measure_robustness/: mean.npy
results/measure_stability/: cholesky.npy  mean.npy  results.pkl  ts.npy
results/measure_wall_time/: n10_d1.pkl  results.pkl
scripts/: run_experiments.sh
src/fixedpointsmoother/: kalman.py  ssm.py  statespace.py
src/fpx/: eval_utils.py  fpx.py
tests/: test_fpx.py  test_kalman.py
