[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fixedpointsmoother"
version = "0.0.1"
dependencies = [
    # Ensure that JAX is installed.
    "pytest",       # testing
    "pytest_cases", # testing
    "pre-commit",   # some basic CI
    "matplotlib",   # plot
    "tueplots",     # plotting utilities
    "PyQt5",        # to resolve "FigureCanvas is not interactive"
]

[tool.pytest.ini_options]
addopts = "-v"
