[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fpx"
version = "0.0.1"
dependencies = [
    # Ensure that JAX is installed.
    "pytest",       # testing
    "pytest_cases", # testing
    "pre-commit",   # some basic CI
    "matplotlib",   # plot
    "tueplots",     # plotting utilities
    "PyQt5",        # to resolve "FigureCanvas is not interactive"
    "mkdocs",
    "mkdocstrings[python]>=0.18",
    "mkdocs-material",
    "pandas",
]
